feat: request body validation
- install zod and implement body validation in endpoint. The implementation validates if all fields are sent and if they are numbers

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "water-jug-riddle": "file:"
+    "water-jug-riddle": "file:",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
