--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1",
     "water-jug-riddle": "file:",
+    "yamljs": "^0.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -26,6 +28,8 @@
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/yamljs": "^0.2.34",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
