--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon ./src/index.ts",
-    "start": "node ./dist/index.js",
+    "start": "tsc && node ./dist/index.js",
     "test": "jest --runInBand --verbose"
   },
   "keywords": [],
